[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["kimdong799 <kimdong799@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.3.29"
langsmith = "^0.3.30"
langchain-openai = "^0.3.12"
dotenv = "^0.9.9"
duckduckgo-search = "^8.0.0"
langchain-community = "^0.3.21"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
